Fixed margin whitespace

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,12 +1,7 @@
-.content-layout {
+/* .content-layout {
   display: flex;
   margin: 20px;
-}
-
-.main-content {
-  flex-grow: 1;
-  margin-right: 20px; /* Spacing between main content and sidebar */
-}
+} */
 
 .sidebar {
   width: 300px; /* Or however wide you want your sidebar to be */
